ControllerActionType detached from KeyManager. Currently, there is no mapping anymore, but this will be fixed asap!

--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -542,6 +542,10 @@
 				<Filter
 					Name="controller"
 					>
+					<File
+						RelativePath=".\HovercraftKeyManager.cpp"
+						>
+					</File>
 					<Filter
 						Name="Hovercraft"
 						>
@@ -984,6 +988,10 @@
 				<Filter
 					Name="controller"
 					>
+					<File
+						RelativePath=".\HovercraftKeyManager.h"
+						>
+					</File>
 					<Filter
 						Name="Hovercraft"
 						>
