--- a/HovercraftUniverse/data/resources.cfg
+++ b/HovercraftUniverse/data/resources.cfg
@@ -28,3 +28,8 @@ FileSystem=levels/models
 FileSystem=levels/materials
 FileSystem=levels/materials/scripts
 FileSystem=levels/materials/textures
+FileSystem=levels/materials/programs
+FileSystem=hovercraft/materials
+FileSystem=hovercraft/materials/scripts
+FileSystem=hovercraft/materials/textures
+FileSystem=hovercraft/materials/programs
