** draw something as hovercraft

--- a/HovercraftUniverse/data/resources.cfg
+++ b/HovercraftUniverse/data/resources.cfg
@@ -33,3 +33,4 @@ FileSystem=hovercraft/materials
 FileSystem=hovercraft/materials/scripts
 FileSystem=hovercraft/materials/textures
 FileSystem=hovercraft/materials/programs
+FileSystem=hovercraft/models
