** loading hovercraft from file ... NOT WORKING VERY WELL YET

--- a/HovercraftUniverse/data/resources.cfg
+++ b/HovercraftUniverse/data/resources.cfg
@@ -29,6 +29,7 @@ FileSystem=levels/materials
 FileSystem=levels/materials/scripts
 FileSystem=levels/materials/textures
 FileSystem=levels/materials/programs
+FileSystem=hovercraft
 FileSystem=hovercraft/materials
 FileSystem=hovercraft/materials/scripts
 FileSystem=hovercraft/materials/textures
