--- a/trunk/HovercraftUniverse/data/controls/Controls.ini
+++ b/trunk/HovercraftUniverse/data/controls/Controls.ini
@@ -1,2 +1,24 @@
 ;User control configuration file.
 ;@author Tobias Van Bladel
+;
+; Multiple keys should be separated with a comma
+[Movement]
+Accelerate=KC_UP,KC_NUMPAD8
+Brake=KC_DOWN,KC_NUMPAD2
+Turnleft=KC_LEFT,KC_NUMPAD4
+Turnright=KC_RIGHT,KC_NUMPAD6
+
+[Camera]
+Changecamera=KC_C,KC_V
+Thirdperson=KC_1
+Firstperson=KC_2
+Rearview=KC_3
+Freeroam=KC_4
+
+[FreeCamera]
+Forward=KC_W
+Back=KC_S
+Left=KC_A
+Right=KC_D
+Up=KC_E
+Down=KC_Q
