* Added lobby state (when you go trough the multiplayer menu you will end up in the lobby. * Added chatServer to main server * Chatclient added into lobby, should be working, but no messages are received. * Fixed menu button to be able to display multiple lines * Fixed bug in serverMenu flash * Moved HUD out of core engine to application project

--- a/HovercraftUniverse/GUI/GUI.vcproj
+++ b/HovercraftUniverse/GUI/GUI.vcproj
@@ -187,6 +187,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\LobbyOverlay.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\MainMenu.cpp"
 					>
 				</File>
@@ -254,6 +258,10 @@
 				</File>
 				<File
 					RelativePath=".\Direction.h"
+					>
+				</File>
+				<File
+					RelativePath=".\LobbyOverlay.h"
 					>
 				</File>
 				<File
