--- a/trunk/HovercraftUniverse/data/controls/Controls.ini
+++ b/trunk/HovercraftUniverse/data/controls/Controls.ini
@@ -3,17 +3,17 @@
 ;
 ; Multiple keys should be separated with a comma
 [Movement]
-Accelerate=KC_UP,KC_NUMPAD8
-Brake=KC_DOWN,KC_NUMPAD2
-Turnleft=KC_LEFT,KC_NUMPAD4
-Turnright=KC_RIGHT,KC_NUMPAD6
+Accelerate=KC_UP,KC_NUMPAD8,KC_VOLUMEUP
+Brake=KC_DOWN,KC_NUMPAD2,KC_VOLUMEDOWN
+Turn Left=KC_LEFT,KC_NUMPAD4
+Turn Right=KC_RIGHT,KC_NUMPAD6
 
 [Camera]
-Changecamera=KC_C,KC_V
-Thirdperson=KC_1
-Firstperson=KC_2
-Rearview=KC_3
-Freeroam=KC_4
+Change Camera=KC_C,KC_V
+External View=KC_1
+Cockpit View=KC_2
+Rear View=KC_3
+Free Roam Camera=KC_4
 
 [FreeCamera]
 Forward=KC_W
