--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -880,6 +880,18 @@
 			Filter="rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav"
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}"
 			>
+			<File
+				RelativePath=".\HovercraftUniverse.rc"
+				>
+			</File>
+			<File
+				RelativePath=".\HovercraftUniverseIcon.ico"
+				>
+			</File>
+			<File
+				RelativePath=".\HovercraftUniverseIconSmall.ico"
+				>
+			</File>
 		</Filter>
 		<File
 			RelativePath="..\data\user\game.userdatatypes.xml"
