--- a/trunk/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.rc
+++ b/trunk/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.rc
@@ -1,2 +1,3 @@
+IDI_VISTAICON			ICON	"HovercraftUniverseVista.ico"
 IDI_HOVERCRAFTUNIVERSE	ICON	"HovercraftUniverseIcon.ico"
 IDI_SMALL				ICON	"HovercraftUniverseIconSmall.ico"
