* Started initial RacePlayer class * Made the Lobby into a singleton replicated object (we only want one) to make connection to a server more sequential and safe * Map loading now starts when the game starts, not when the lobby is loaded * Chatting works again

--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -891,6 +891,10 @@
 					Name="GameLogic"
 					>
 					<File
+						RelativePath=".\RacePlayer.h"
+						>
+					</File>
+					<File
 						RelativePath=".\RaceState.h"
 						>
 					</File>
