* Players will finally show up in the lobby (only the hovercraft name since the rest doesn't get replicated for some reason) * Created PlayerSettingsInterceptor to intercept PlayerSettings updates * Some more commenting and small changes to code

--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -464,6 +464,10 @@
 						RelativePath=".\PlayerSettings.cpp"
 						>
 					</File>
+					<File
+						RelativePath=".\PlayerSettingsInterceptor.cpp"
+						>
+					</File>
 				</Filter>
 				<Filter
 					Name="State"
@@ -848,6 +852,14 @@
 					</File>
 					<File
 						RelativePath=".\PlayerSettings.h"
+						>
+					</File>
+					<File
+						RelativePath=".\PlayerSettingsInterceptor.h"
+						>
+					</File>
+					<File
+						RelativePath=".\PlayerSettingsListener.h"
 						>
 					</File>
 				</Filter>
