--- a/trunk/HovercraftUniverse/CoreEngine/CoreEngine.vcproj
+++ b/trunk/HovercraftUniverse/CoreEngine/CoreEngine.vcproj
@@ -80,7 +80,7 @@
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
-			OutputDirectory="$(SolutionDir)$(ConfigurationName)"
+			OutputDirectory="$(SolutionDir)lib\$(ConfigurationName)"
 			IntermediateDirectory="$(ConfigurationName)"
 			ConfigurationType="4"
 			CharacterSet="2"
