--- a/trunk/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/trunk/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="Windows-1252"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="HovercraftUniverse"
 	ProjectGUID="{CCFF60E1-9306-493F-AD38-410877FB3177}"
 	RootNamespace="HovercraftUniverse"
@@ -521,6 +521,10 @@
 					Name="GameLogic"
 					>
 					<File
+						RelativePath=".\RacePlayer.cpp"
+						>
+					</File>
+					<File
 						RelativePath=".\RaceState.cpp"
 						>
 					</File>
@@ -936,6 +940,10 @@
 					</File>
 					<File
 						RelativePath=".\RaceState.h"
+						>
+					</File>
+					<File
+						RelativePath=".\RaceStateListener.h"
 						>
 					</File>
 				</Filter>
