--- a/HovercraftUniverse/GUI/GUI.vcproj
+++ b/HovercraftUniverse/GUI/GUI.vcproj
@@ -199,6 +199,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\MessageBox.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\Position.cpp"
 					>
 				</File>
@@ -270,6 +274,10 @@
 				</File>
 				<File
 					RelativePath=".\MenuButton.h"
+					>
+				</File>
+				<File
+					RelativePath=".\Messagebox.h"
 					>
 				</File>
 				<File
