* Connecting to server is back up to speed and will no longer block everything * when no server is available will show an error message will pop up. --> don't move the mouse to fast for now or it will crash

--- a/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
+++ b/HovercraftUniverse/HovercraftUniverse/HovercraftUniverse.vcproj
@@ -190,6 +190,10 @@
 				Name="Network"
 				>
 				<File
+					RelativePath=".\ClientConnectThread.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\EntityRegister.cpp"
 					>
 				</File>
@@ -575,6 +579,10 @@
 			<Filter
 				Name="Network"
 				>
+				<File
+					RelativePath=".\ClientConnectThread.h"
+					>
+				</File>
 				<File
 					RelativePath=".\EntityRegister.h"
 					>
