--- a/HovercraftUniverse/GUI/GUI.vcproj
+++ b/HovercraftUniverse/GUI/GUI.vcproj
@@ -257,6 +257,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\ConnectListener.h"
+					>
+				</File>
+				<File
 					RelativePath=".\ConnectWindow.h"
 					>
 				</File>
