* Created loader classes * Updated lobby interface so that maximum number of players can now be updated by the admin.

--- a/HovercraftUniverse/GUI/GUI.vcproj
+++ b/HovercraftUniverse/GUI/GUI.vcproj
@@ -187,6 +187,10 @@
 					>
 				</File>
 				<File
+					RelativePath=".\LoadingOverlay.cpp"
+					>
+				</File>
+				<File
 					RelativePath=".\LobbyOverlay.cpp"
 					>
 				</File>
@@ -266,6 +270,10 @@
 				</File>
 				<File
 					RelativePath=".\Direction.h"
+					>
+				</File>
+				<File
+					RelativePath=".\LoadingOverlay.h"
 					>
 				</File>
 				<File
